<resources>
    <string name="app_name">QUICK</string>
    <string name="card_person">Person</string>
    <string name="card_private">Private</string>
    <string name="card_public">Public</string>

    <string name="activity_login_signup">No account yet? Create one</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_loginbutton">Login</string>

    <string name="activity_sign_up_username">User Name</string>
    <string name="activity_sign_up_email">Email</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_signupbutton">Signup</string>

    <string name="activity_card_menu_private">Private</string>
    <string name="activity_card_menu_public">Public</string>

    <string name="card_menu_title_text_view">card_menu_title_text_view</string>
    <string name="card_menu_content_text_view">card_menu_content_text_view</string>
    <string name="card_menu_delete_button">card_menu_delete_button</string>

    <string name="message_field_hint">Write a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
