<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:tag="@string/card_menu_title_text_view"
            tools:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            android:tag="@string/card_menu_content_text_view"
            tools:text="Quis custodiet ipsos custodes?"/>
        <ImageButton
            android:tag="@string/card_menu_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/card_menu_delete_button"
            android:padding="8dp"
            android:src="@drawable/cross"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

